Post update: TITLEJHDG

--- a/_posts/2016-04-29-testing.markdown
+++ b/_posts/2016-04-29-testing.markdown
@@ -4,6 +4,6 @@ title: TITLEJHDG
 layout: post
 tags: [FGHFGH]
 categories: [SHOPPING]
-permalink: https://docs.google.com
+permalink: TEST
 ---
-TESTING
+<Aa href="www.abcd.com">TESTING</a>
